[tool.poetry]
name = "torchgel"
version = "2.0.0"
description = "PyTorch implementation of group elastic net"
authors = ["Jayanth Koushik <jnkoushik@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jayanthkoushik/torch-gel"
packages = [
    { include = "gel" },
    { include = "tests", format = "sdist" }
]

keywords = ["pytorch", "lasso", "elasticnet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[tool.poetry.dependencies]
python = "^3.6.1"
tqdm = "^4.0"
numpy = "^1.10"

scipy = { version = "*", optional = true }
cvxpy = { version = "^1.0", optional = true }
cvxopt = { version = "1.2.5", optional = true }

[tool.poetry.dev-dependencies]
black = { version = ">=19.3b0", allow-prereleases = true }
pylint = "^2.3"
pre-commit = "^2.0"
isort = "^4.3"
mypy = "^0.770"
bump2version = "*"

[tool.poetry.extras]
test = ["scipy", "cvxpy", "cvxopt"]

[tool.black]
line-length = 88

[tool.isort]
line_length = 88
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true
combine_as_imports = true
force_alphabetical_sort_within_sections = true

[tool.pylint.MASTER]
extension-pkg-whitelist = "torch"

[tool.pylint.TYPECHECK]
generated-members = "torch.*"

[tool.pylint.FORMAT]
max-line-length = "88"

[tool.pylint.'MESSAGES CONTROL']
disable = """
    too-few-public-methods,
    too-many-instance-attributes,
    too-many-arguments,
    too-many-locals,
    too-many-statements,
    too-many-branches,
    bad-continuation,
    missing-docstring,
    invalid-name,
    protected-access,
    wrong-import-position,
    logging-format-interpolation,
    logging-fstring-interpolation,
    arguments-differ,
    abstract-method,
    not-callable,
    duplicate-code,
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
